3rd, roughly finish with 2 easy pages :relaxed:
3rd, roughly finish with 2 easy pages :relaxed:

--- a/blog/css/index.css
+++ b/blog/css/index.css
@@ -1,181 +1,2 @@
-* {
-  padding: 0;
-  margin: 0;
-}
-
-body {
-  color: #fff;
-  font-size: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, PingFang SC, Source Han Sans CN, Hiragino Sans GB, Microsoft YaHei, WenQuanYi Micro Hei, sans-serif;
-}
-
-header {
-  background-color: #36546a;
-}
-header .navBar {
-  font-size: 1.4em;
-}
-header .navBar ul {
-  list-style: none;
-  float: right;
-}
-header .navBar ul li {
-  display: inline-block;
-}
-header .navBar a {
-  line-height: 60px;
-  color: #fff;
-  transition: background-color 0.8s;
-}
-header .navBar a .link, header .navBar a .logo {
-  padding: 20px 20px 0;
-}
-header .navBar a:hover {
-  background-color: #2d6995;
-}
-header .maxim {
-  width: 70%;
-  padding: 30px 0 66px;
-  margin: 0 auto;
-  margin-bottom: 30px;
-}
-header .maxim h2, header .maxim h4 {
-  color: #fff;
-  text-align: center;
-}
-header .maxim h2 {
-  font-size: 1.6em;
-  font-weight: 500;
-  padding-bottom: 15px;
-}
-header .maxim h4 {
-  font-size: 1.1em;
-  font-weight: 400;
-  padding-top: 15px;
-}
-
-a {
-  text-decoration: none;
-  display: inline-block;
-}
-
-.article-block {
-  display: block;
-}
-
-.article {
-  margin: 0 auto;
-  padding: 40px 0;
-  color: #555;
-}
-.article .block {
-  width: 60%;
-  margin: 0 auto;
-  padding: 36px;
-  box-shadow: #d3d3c1 0 0 10px;
-  transition: box-shadow 0.5s;
-  /* article block style */
-  /* article detail style */
-}
-.article .block .article-title {
-  margin-bottom: 30px;
-  padding-bottom: 16px;
-  border-bottom: 3px solid #377092;
-  display: inline-block;
-  font-size: 30px;
-  transition: padding-right 0.5s;
-}
-.article .block .article-title a {
-  color: rgba(0, 0, 0, 0.8);
-  transition: color 0.5s;
-}
-.article .block .article-title:hover {
-  padding-right: 30px;
-}
-.article .block .article-title:hover a {
-  color: #377092;
-}
-.article .block .article-date {
-  font-size: 16px;
-  font-weight: 400;
-  float: right;
-}
-.article .block .article-description {
-  color: #89867e;
-  padding: 30px 25px;
-}
-.article .block .title {
-  margin: 20px 0 10px;
-  font-size: 30px;
-  text-align: center;
-  color: #555;
-}
-.article .block .date {
-  font-weight: 400;
-  font-size: 15px;
-  text-align: center;
-}
-.article .block .parting-line {
-  width: 90%;
-  height: 2px;
-  margin: 30px auto;
-  background-color: #377092;
-}
-.article .block .content {
-  width: 90%;
-  margin: 0 auto;
-  line-height: 2em;
-}
-.article .block .pre-next .pre, .article .block .pre-next .next {
-  witdh: 47%;
-  display: inline-block;
-  overflow: hidden;
-}
-.article .block .pre-next .pre a, .article .block .pre-next .next a {
-  color: #444;
-}
-.article .block .pre-next .pre a span, .article .block .pre-next .next a span {
-  display: inline-block;
-  border-bottom: 1px solid #ccc;
-  font-size: 14px;
-}
-.article .block .pre-next .next {
-  float: right;
-}
-.article .block .pre-next .next span {
-  text-align: right;
-}
-.article .block:hover {
-  box-shadow: #b2b2a5 0 0 20px;
-}
-
-.showmore {
-  width: 100px;
-  margin: 30px auto;
-  padding: 12px 60px;
-  background-color: #377092;
-  border-radius: 5px;
-  cursor: pointer;
-  text-align: center;
-  transition: background-color 0.5s;
-}
-
-.showmore:hover {
-  background-color: #5692b5;
-}
-
-footer {
-  margin-top: 40px;
-  background-color: #36546a;
-  text-align: center;
-}
-footer p {
-  padding: 16px 0;
-  color: #fff;
-  font-size: 0.8em;
-}
-footer a {
-  color: #fff;
-}
-
+*{padding:0;margin:0}body{color:#fff;font-size:1em;font-family:-apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, PingFang SC, Source Han Sans CN, Hiragino Sans GB, Microsoft YaHei, WenQuanYi Micro Hei, sans-serif}.h1,.h2,.h3,h1,h2,h3{padding:20px 0 10px;font-weight:500}header{background-color:#36546a}header .navBar{font-size:1.4em}header .navBar .nav-left{width:15%;display:inline-block}header .navBar .nav-right{position:absolute;right:0;top:0}header .navBar ul{list-style:none}header .navBar ul li{display:inline-block}header .navBar a{position:relative;line-height:60px;color:#fff;transition:background-color 0.8s}header .navBar a:hover .fall:before{transform:translateY(0)}header .navBar .fall{margin:20px 20px 30px}header .navBar .fall:before{display:inline-block;position:absolute;top:0;right:0;width:100%;height:100%;border-radius:0 0 12px 12px;background-color:rgba(45,105,149,0.52);transform:translateY(-100%);transition:transform 0.3s ease-in-out 0s;content:""}header .maxim{width:80%;padding:30px 0 66px;margin:0 auto;margin-bottom:30px;color:#fff}header .maxim h2{font-size:1.6em;font-weight:500;padding-bottom:15px}header .maxim h4{font-size:1.1em;font-weight:400;padding-top:15px}a{text-decoration:none;display:inline-block}.text-center{text-align:center;display:block;font-family:PingFang SC}.text-right{float:right;text-align:right}.fa{font-size:1em}.icon-link{background-color:rgba(0,0,0,0.1);color:rgba(0,0,0,0.5);transition:all 0.2s ease-in-out 0s;width:42px;height:42px;line-height:42px;border-radius:42px}.article{margin:0 auto;padding:40px 0;color:#555}.article .block{width:56%;margin:0 auto;padding:36px;box-shadow:#d3d3c1 0 0 10px;transition:box-shadow 0.3s ease-in-out 0s}@media screen and (min-width: 667px) and (max-width: 1024px){.article .block{width:78%}}.article .block .title{font-family:Tahoma, Helvetica, Arial;font-size:2em}.article .block .date{font-size:1em;font-weight:400}.article .block .content{width:90%;margin:0 auto;line-height:2em}.article .block .block-title{margin-bottom:30px;padding:0 0 16px;border-bottom:3px solid #377092;display:inline-block;transition:padding-right 0.3s ease-in-out 0s}.article .block .block-title a{color:rgba(0,0,0,0.8);transition:color 0.3s ease-in-out 0s}.article .block .block-title:hover{padding-right:30px}.article .block .block-title:hover a{font-weight:450;color:#377092}.article .block .parting-line{width:80%;height:2px;margin:30px auto;background-color:#377092;transition:width 0.3s ease-in-out 0s}.article .block .pre,.article .block .next{width:47%;display:inline-block;overflow:hidden}.article .block .pre a,.article .block .next a{color:#444}.article .block .pre a span,.article .block .next a span{display:inline-block;border-bottom:1px solid #ccc;font-size:1em}.article .block:hover{box-shadow:#b2b2a5 0 0 20px}.article .block:hover .parting-line{width:90%}.showmore{width:100px;margin:30px auto;padding:12px 60px;background-color:#377092;border-radius:5px;cursor:pointer;transition:background-color 0.5s ease-in-out 0s}.showmore:hover{background-color:#5692b5}footer{margin-top:40px;background-color:#36546a}footer p{padding:16px 0;color:#fff;font-size:0.8em}footer a{color:#fff}
 /*# sourceMappingURL=index.css.map */
