--- a/blog/css/index.scss
+++ b/blog/css/index.scss
@@ -1,248 +1,9 @@
-
-/* variables */
-
-* {
- 	padding: 0;
- 	margin: 0;
-}
-
-body {
-	
-	color: #fff;
-    font-size: 1em;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, PingFang SC, Source Han Sans CN, Hiragino Sans GB, Microsoft YaHei, WenQuanYi Micro Hei, sans-serif;
-}
-
-.h1, .h2, .h3, h1, h2, h3 {
-   padding: 20px 0 10px;
-   font-weight: 500;
-}
+@import "./reset.scss";   /* format first */
+@import "./media.scss";
+@import "./common.scss";
+@import "./header.scss";
+@import "./article.scss";
+@import "./footer.scss";
 
 
-header {
-	background-color: #36546a;
-	
-	.navBar {
-		font-size: 1.4em;
 
-		.nav-left {
-			width: 15%;
-			display: inline-block;
-		}
-
-		.nav-right {
-			position: absolute;
-			right: 0;
-			top: 0;
-		}
-
-		ul {
-			list-style: none;
-			li {
-				display: inline-block;
-			}
-		}
-
-		a {
-			position: relative;    /* reference of next div position */
-			line-height: 60px;
-			color: #fff;
-			transition: background-color 0.8s;
-
-			&:hover {
-				.fall:before {
-					transform: translateY(0);
-				}
-			}
-		}
-
-		.fall {
-			margin: 20px 20px 30px;
-
-			&:before {
-				display: inline-block;
-				position: absolute;
-				top: 0;
-				right: 0;
-				width: 100%;
-				height: 100%;
-				border-radius: 0 0 12px 12px;
-				background-color:rgba(45, 105, 149, 0.52);
-				transform: translateY(-100%);
-				transition: transform 0.3s ease-in-out 0s;
-				content: "";
-			}
-		}
-
-	}
-
-	.maxim {
-		width: 80%;
-		padding: 30px 0 66px;
-		margin: 0 auto;
-		margin-bottom: 30px;
-		color: #fff;
-		
-		h2 {
-			font-size: 1.6em;
-			font-weight: 500;
-			padding-bottom: 15px;
-		}
-
-		h4 {
-			font-size: 1.1em;
-			font-weight: 400;
-			padding-top: 15px;
-		}
-	}
-}
-
-a {
-	text-decoration: none;
-	display: inline-block;
-}
-
-.text-center {
-	text-align: center;
-	display: block;
-	font-family: PingFang SC;
-}
-
-.text-right {
-	float: right;
-	text-align: right;
-}
-
-.fa {
-	font-size: 1em;
-}
-
-.icon-link {
-    background-color: rgba(0,0,0,.1);
-    color: rgba(0,0,0,.5);
-    transition: all 0.2s ease-in-out 0s;
-    width: 42px;
-    height: 42px;
-    line-height: 42px;
-    border-radius: 42px;
-}
-
-.article {
-	margin: 0 auto;
-	padding: 40px 0;
-	color: #555;
-	
-	.block {
-
-		@media screen and (min-width: 667px) and (max-width : 1024px)
-		{
-			width: 78%;
-		}
-
-		width: 56%;
-		margin: 0 auto;
-		padding: 36px;
-		box-shadow: #d3d3c1 0 0 10px;
-		transition: box-shadow 0.3s ease-in-out 0s;
-
-		.title {
-			font-family: Tahoma, Helvetica, Arial;
-			font-size: 2em;
-		}
-
-		.date {
-			font-size: 1em;
-			font-weight: 400;
-		}
-
-		.content {
-			width: 90%;
-			margin: 0 auto;
-			line-height: 2em;
-		}
-
-		/* article block style */
-		.block-title {
-			margin-bottom: 30px;
-			padding: 0 0 16px;
-			border-bottom: 3px solid #377092;
-			display: inline-block;
-			transition: padding-right 0.3s ease-in-out 0s;
-
-			a {
-				color: rgba(0, 0, 0, 0.8);
-				transition: color 0.3s ease-in-out 0s;
-			}
-
-			&:hover {
-				padding-right: 30px;
-
-				a {
-					font-weight: 450;
-					color: #377092;
-				}
-			}
-		}
-
-		/* article detail style */
-		.parting-line {
-			width: 80%;
-			height: 2px;
-			margin: 30px auto;
-			background-color: #377092;
-			transition: width 0.3s ease-in-out 0s;
-		}	
-
-		.pre, .next {
-			width: 47%;
-			display: inline-block;
-			overflow: hidden;
-
-			a {
-				color: #444;
-				span {
-					display: inline-block;
-					border-bottom: 1px solid #ccc;
-					font-size: 1em;
-				}
-			}
-		}
-
-		&:hover {
-			box-shadow: #b2b2a5 0 0 20px;
-			.parting-line {
-				width: 90%;
-			}
-		}
-	}
-}
-
-.showmore {
-	width: 100px;
-	margin: 30px auto;
-	padding: 12px 60px;
-	background-color: #377092;
-	border-radius: 5px;
-	cursor: pointer;
-
-	transition: background-color 0.5s ease-in-out 0s;
-
-	&:hover {
-		background-color: #5692b5;
-	}
-}
-
-footer {
-	margin-top: 40px;
-	background-color: #36546a;
-
-	p {
-		padding: 16px 0;
-		color: #fff;
-		font-size: 0.8em;
-	}
-
-	a {
-		color: #fff;
-	}
-}
