--- a/blog/css/media.scss
+++ b/blog/css/media.scss
@@ -1,17 +1,17 @@
 $mediumSize: 1170px;
 $smallSize: 800px;
 
-@mixin fontSize($ratioBig, $ratioMedium, $ratioSmall) {
-	font-size: $ratioBig;
+// @mixin fontSize($ratioBig, $ratioMedium, $ratioSmall) {
+// 	font-size: $ratioBig;
 
-	@media (max-width: $mediumSize) {
-		font-size: $ratioMedium;
-	}
+// 	@media (max-width: $mediumSize) {
+// 		font-size: $ratioMedium;
+// 	}
 
-	@media (max-width: $smallSize) {
-		font-size: $ratioSmall;
-	}
-}
+// 	@media (max-width: $smallSize) {
+// 		font-size: $ratioSmall;
+// 	}
+// }
 
 @mixin mediaSize($style, $ratioBig, $ratioMedium, $ratioSmall) {
 
@@ -25,4 +25,18 @@ $smallSize: 800px;
 		#{$style}: $ratioSmall;
 	}
 
+}
+
+@mixin respondTo($breakpoint) {
+	@if $breakpoint == "small" {
+		@media (max-width: $smallSize) {
+			@content;
+		}
+	} @else if $breakpoint == "medium" {
+		@media (max-width: $mediumSize) {
+			@content;
+		}
+	} @else {
+		@content;
+	}
 }
