--- a/blog/css/article.scss
+++ b/blog/css/article.scss
@@ -24,21 +24,17 @@ $btHoverColor: #5692b5;
     		line-height: 1.1;
 		}
 
+		.fa {
+			margin: 0 0.6rem;
+		}
+
 		.date {
 			//font-size: 1.6rem;
 		}
-		
+
 		.introduction {
 			line-height: 1.3;
 			padding: 28px 0 10px 0;
-		}
-
-		.img-title, .post-img {
-			width: 90%;
-			margin: 0 auto;
-			@include mediaSize(margin-bottom, 1rem, 0.8rem, 0.5rem);
-			display: block;
-			border-radius: 5px;
 		}
 
 		.content {
@@ -66,14 +62,59 @@ $btHoverColor: #5692b5;
 					display:block;
 				}
 			}
+			
+			.text-end {
+				text-align: right;
+			}
 
 			.img-block {
+				position: relative;
+				@include mediaSize(width, 70%, 80%, 90%);
+				margin: 0 auto;
+
+				.post-img {
+					@include mediaSize(width, 70%, 80%, 90%);
+					margin: 1rem auto;
+					@include mediaSize(margin-bottom, 1rem, 1rem, 2.5rem);
+					display: block;
+					border-radius: 5px;
+				}
+				
+				.img-description {
+					position: absolute;
+					left: 100%;
+					top: 50%;
+					transform: translateY(-50%);
+					border-bottom: 0.13rem solid $themeColor;
+					border-top: 0.13rem solid $themeColor;
+					line-height: 1.6;
+
+					@include respondTo(small) {
+						width: 100%;
+						left: 50%;
+						top: 103%;
+						transform: translateX(-50%);
+						border-left: 0.13rem solid $themeColor;
+						border-right: 0.13rem solid $themeColor;
+					}
+				}			
+			}
+
+			.img-scroll {
 				width: 100%;
 				overflow-x: auto;
 				/* for chrome */
 				::-webkit-scrollbar {
 					display: none;
 				}
+			}
+
+			.root-red {
+				color: #f00;
+			}
+
+			.root-blue {
+				color: #0488ec;
 			}
 		}
 
@@ -82,7 +123,7 @@ $btHoverColor: #5692b5;
 			margin-bottom: 6px;
 			padding: 0 0 16px;
 			border-bottom: 3px solid $themeColor;
-			display: inline-block;
+			@include mediaSize(display, inline-block, inline-block, block);
 			transition: padding-right 0.3s ease-in-out 0s;
 
 			a {
@@ -111,21 +152,9 @@ $btHoverColor: #5692b5;
 			transition: width 0.3s ease-in-out 0s;
 		}	
 
-		.pre, .next {
-			width: 47%;
-			display: inline-block;
-			overflow: hidden;
-
-			a {
-				color: #444;
-			}
-		}
-
 		.pre, .next, h3 {
 			transition: color 0.3s ease-in-out 0s;
-			a {
-				transition: color 0.3s ease-in-out 0s;
-			}
+
 			span {
 				display: inline-block;
 				border-bottom: 1px solid #ccc;
@@ -134,16 +163,32 @@ $btHoverColor: #5692b5;
 
 			&:hover {
 				color: $themeColor;
-				
-				a {
-					color: $linkHoverColor;
-				}
 
 				span {
 					display: inline-block;
 					border-bottom: 1px solid $linkHoverColor;
 				}
 			}
+		}
+		
+		.pre, .next {
+			@include mediaSize(display, inline-block, inline-block, block);
+			overflow: hidden;
+			padding-bottom: 0.8rem;
+			a {
+				color: #444;
+				transition: color 0.3s ease-in-out 0s;
+			}
+
+			&:hover {
+				a {
+					color: $linkHoverColor;
+				}
+			}
+		}
+
+		.next {
+			@include mediaSize(float, right, right, none);
 		}
 
 		&:hover {
