--- a/blog/static/css/index.scss
+++ b/blog/static/css/index.scss
@@ -3,6 +3,7 @@
 @import "./common.scss";
 @import "./header.scss";
 @import "./article.scss";
+@import "./photo.scss";
 @import "./footer.scss";
 @import "./totop.scss"
 
