--- a/blog/static/css/totop.scss
+++ b/blog/static/css/totop.scss
@@ -1,6 +1,8 @@
 
 .to-top {
+    display: none;
     position: fixed;
+    z-index: 1000;
     background-color: #ddd;
     border-radius: 3px;
     @include mediaSize(width, 3rem, 2rem, 2rem);
